# nexus

./: .commit_msg.txt  .cursorrules  .dockerignore  .gitignore  .gitmodules  .implementation-complete  .rulebook  AGENTS.md  AGENTS.override.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.memtest  F:Nodehivellmnexusrulebooktaskscomplete-neo4j-compatibilitytasks.md  LICENSE  LICENSE-NOTICE.md  NEXT_TASKS_SUMMARY.md  OPENSPEC_SUMMARY.md  PERFORMANCE.md  README.md  bench-compare-final.md  benchmark-results-2025-11-17_16-07-15.json  benchmark-results-2025-11-17_18-07-53.json  benchmark-results-2025-11-17_18-17-23.json  benchmark-results-2025-11-17_18-28-11.json  benchmark-results-2025-11-19_18-52-52.json  benchmark-results-2025-11-19_18-53-07.json  benchmark-results-2025-11-19_19-04-02.json  benchmark-results-2025-11-19_19-30-13.json  benchmark-results-2025-11-19_19-36-02.json  benchmark-results-2025-11-19_20-11-53.json  benchmark-results-2025-11-19_22-31-57.json  benchmark-results-2025-11-19_22-32-03.json  benchmark-results-2025-11-19_22-34-10.json  benchmark-results-2025-11-19_22-36-30.json  benchmark-results-2025-11-19_22-42-05.json  benchmark-results-2025-11-19_22-51-01.json  benchmark-results-2025-11-19_22-52-17.json  (+33 more)
crates/nexus-bench/: Cargo.toml  README.md
crates/nexus-bench/examples/: concurrent_sweep.rs
crates/nexus-bench/src/: client.rs  concurrent.rs  dataset.rs  divergence.rs  harness.rs  lib.rs  scenario.rs  scenario_catalog.rs
crates/nexus-bench/tests/: live_bench.rs  live_compare.rs  live_rpc.rs  smoke.rs
crates/nexus-knn-bench/: Cargo.toml  README.md
crates/nexus-knn-bench/src/: corpus.rs  groundtruth.rs  lib.rs  metrics.rs  report.rs  sweep.rs
crates/nexus-protocol/: Cargo.toml  README.md
crates/nexus-protocol/src/: lib.rs  rest.rs
crates/nexus-server/: Cargo.toml  README.md
crates/nexus-server/debian/: nexus-server.service  postrm
crates/nexus-server/src/: cluster_bootstrap.rs  config.rs  lib.rs  main.rs
crates/nexus-server/tests/: admin_queries_endpoint_test.rs  auth_management_authorization_test.rs  cypher_database_routing_test.rs  database_management_authorization_test.rs  graphql_integration_test.rs  hub_auth_middleware_test.rs  lock_free_read_path_test.rs  mcp_auth_test.rs  no_oncelock_globals.rs  rpc_integration_test.rs  server_hardening_test.rs  streaming_mcp_write_test.rs  vectorizer_integration_test.rs
nexus-cli/: CHANGELOG.md  Cargo.toml  README.md
nexus-cli/docs/: BEST_PRACTICES.md
nexus-cli/man/: nexus-db.1  nexus-key.1  nexus-query.1  nexus-user.1  nexus.1
nexus-cli/scripts/: install.ps1  install.sh  uninstall.sh
nexus-cli/src/: client.rs  config.rs  cypher_helper.rs  endpoint.rs  main.rs
nexus-cli/src/commands/: admin.rs  completion.rs  config.rs  data.rs  db.rs  key.rs  mod.rs  query.rs  schema.rs  user.rs
nexus-cli/tests/: README.md  cli_tests.rs  config_tests.rs  multi_database_cli_integration_test.rs
nexus-core/: Cargo.toml
nexus-core/benches/: cluster_mode_benchmark.rs  executor_aggregate.rs  executor_filter.rs  exists_subquery_benchmark.rs  graph_correlation_benchmark.rs  optional_match_benchmark.rs  parser_tokenize.rs  protocol_point_read.rs  simd_compare.rs  simd_distance.rs  simd_reduce.rs  vectorizer_extraction_benchmark.rs
nexus-core/data/catalog/: data.mdb  lock.mdb
nexus-core/examples/: clustering_example.rs  graph_construction_example.rs
nexus-core/nexus-core/: debug_test.rs
nexus-core/src/: clustering.rs  concurrent_access.rs  error.rs  graph.rs  graph_comparison.rs  graph_construction.rs  graph_simple.rs  lib.rs  memory_management.rs  monitoring.rs  query_cache.rs  retry.rs  validation.rs  vectorizer_cache.rs
nexus-core/src/auth/: api_key.rs  audit.rs  chatroom_permissions.rs  database_permissions.rs  jwt.rs  middleware.rs  mod.rs  password.rs  permissions.rs  queue_permissions.rs  rbac.rs  storage.rs
nexus-core/src/cache/: mod.rs  (+7 more)
nexus-core/test_data/: data.mdb  lock.mdb
nexus-core/tests/: README.md  advanced_features_s2s_test.rs  alter_database_test.rs  api_keys_s2s_test.rs  auth_integration_s2s_test.rs  auth_s2s_test.rs  benchmark_aggregation_performance.rs  benchmark_create_profiling.rs  benchmark_lock_contention.rs  benchmark_relationship_traversal.rs  benchmark_write_performance.rs  builtin_functions_test.rs  cluster_isolation_tests.rs  count_distinct_tests.rs  cross_database_queries_test.rs  executor_comprehensive_test.rs  geospatial_integration_test.rs  graph_comparison_test.rs  graph_correlation_complete_test.rs  graph_correlation_complex_dependency_test.rs  graph_correlation_integration_test.rs  graph_correlation_mock_integration_test.rs  graph_correlation_real_codebase_test.rs  graph_correlation_visualization_integration_test.rs  graph_storage_engine_validation_test.rs  in_operator_tests.rs  integration.rs  integration_extended.rs  integration_performance_test.rs  load_csv_test.rs  loader_comprehensive_test.rs  logical_operators_tests.rs  mathematical_operators_test.rs  multi_database_integration_test.rs  multi_database_success_metrics_test.rs  neo4j_behavior_tests.rs  neo4j_compatibility_test.rs  neo4j_multi_database_compatibility_test.rs  neo4j_result_comparison_test.rs  new_functions_test.rs  (+55 more)
nexus-protocol/: Cargo.toml
nexus-protocol/src/: lib.rs  mcp.rs  rest.rs  umicp.rs
nexus-protocol/tests/: auth_test.rs  protocol_extended_tests.rs
nexus-server/: Cargo.toml
nexus-server/debian/: nexus-server.service  postinst  postrm
nexus-server/src/: config.rs  lib.rs  main.rs
nexus-server/tests/: cypher_injection_test.rs  graph_correlation_umicp_tests.rs  graphql_integration_test.rs  integration_tests.rs  mcp_auth_test.rs  resp3_integration_test.rs  rpc_integration_test.rs  vectorizer_integration_test.rs  vectorizer_mock_test.rs
sdks/langflow/: .gitignore  README.md  pyproject.toml
sdks/python/: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_sdk_comprehensive.py  test_sdk_simple.py
sdks/rust/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PUBLISH.md  README.md
(+3323 files in other folders)
