[workspace]
resolver = "2"
members = [
    "nexus-core",
    "nexus-server",
    "nexus-protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["HiveLLM Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hivellm/nexus"
rust-version = "1.85"

[workspace.dependencies]
# Core graph engine
nexus-core = { path = "nexus-core" }
nexus-protocol = { path = "nexus-protocol" }

# Storage
memmap2 = "0.9"
heed = "0.20"
parking_lot = "0.12"
roaring = "0.10"

# Indexes
tantivy = "0.22"
hnsw_rs = "0.3"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.9"
bytemuck = { version = "1.21", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

