
[workspace]
resolver = "2"
members = [
    "nexus-core",
    "nexus-server",
    "nexus-protocol",
]

[workspace.package]
version = "0.9.9"
edition = "2024"
authors = ["HiveLLM Contributors <team@hivellm.org>"]
license = "MIT"
repository = "https://github.com/hivellm/nexus"
homepage = "https://github.com/hivellm/nexus"
rust-version = "1.85"

[workspace.dependencies]
# Core graph engine
nexus-core = { path = "nexus-core" }
nexus-protocol = { path = "nexus-protocol" }

# Storage
memmap2 = "0.9"
heed = "0.20"
parking_lot = "0.12"
roaring = "0.10"

# Indexes
tantivy = "0.22"
hnsw_rs = "0.3"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1.5"
hyper-util = "0.1"

# MCP dependencies
rmcp = { version = "0.8.1", features = ["server", "macros", "transport-streamable-http-server"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.9"
bytemuck = { version = "1.21", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

