
[workspace]
resolver = "2"
members = [
    "crates/nexus-core",
    "crates/nexus-server",
    "crates/nexus-protocol",
    "crates/nexus-cli",
    "crates/nexus-bench",
    "crates/nexus-knn-bench",
]
exclude = [
    "sdks/rust",
]

[workspace.package]
version = "2.1.0"
edition = "2024"
authors = ["HiveLLM Contributors <team@hivellm.org>"]
license = "Apache-2.0"
repository = "https://github.com/hivellm/nexus"
homepage = "https://github.com/hivellm/nexus"
rust-version = "1.85"

[workspace.dependencies]
# Core graph engine
nexus-core = { path = "crates/nexus-core" }
nexus-protocol = { path = "crates/nexus-protocol" }

# Storage
memmap2 = "0.9"
# `read-txn-no-tls` switches LMDB envs to MDB_NOTLS so reader slot
# allocation no longer consumes Windows TLS slots. Without it, the
# nexus-core lib test binary (~2150 tests, each opening its own
# Catalog -> Env) exhausts the OS TLS quota and `env.read_txn()`
# returns `Database(Mdb(TlsFull))` mid-suite. The feature also
# relaxes `RoTxn` to `Send`, which the codebase already tolerates
# (every catalog read txn lives on the thread that opened it).
heed = { version = "0.20", features = ["read-txn-no-tls"] }
parking_lot = "0.12"
roaring = "0.10"

# Indexes
tantivy = "0.22"
hnsw_rs = "0.3"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "compression-br"] }
hyper = "1.5"
hyper-util = "0.1"

# MCP dependencies
rmcp = { version = "0.8.1", features = ["server", "macros", "transport-streamable-http-server"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
async-trait = "0.1"

# GraphQL dependencies
async-graphql = { version = "7.0", features = ["chrono", "uuid"] }
async-graphql-axum = "7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.9"
bytemuck = { version = "1.21", features = ["derive"] }
rmp-serde = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
rand = "0.8"

# Cryptography (encryption-at-rest, phase8_encryption-at-rest).
# `aes-gcm` is the AEAD; `hkdf` derives per-database keys from the
# master key. `zeroize` wipes secret material on drop. `sha2` here
# is pinned to 0.10 for `hkdf` (0.12) compatibility — distinct from
# the `sha2 = "0.11"` nexus-core already pulls in for argon2 / API
# keys; Cargo resolves both copies side-by-side under the
# `sha2_010` rename in the consumer.
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
hkdf = "0.12"
sha2_010 = { package = "sha2", version = "0.10", default-features = false }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# KMS adapters (phase8_encryption-at-rest-kms). Each is feature-gated
# at the consumer (nexus-core) so default builds do not pay the
# transitive-dep cost. Operators who actually deploy with a managed
# KMS opt in via `--features kms-aws|kms-gcp|kms-vault`.
#
# AWS: official `aws-sdk-kms` + `aws-config` for SigV4 + endpoint
# resolution. `behavior-version-latest` keeps the SDK on its newest
# default-config track without us pinning the version label here.
aws-config = { version = "1.5", default-features = false, features = ["behavior-version-latest", "rustls"] }
aws-sdk-kms = { version = "1.49", default-features = false, features = ["behavior-version-latest", "rustls"] }
# GCP: `google-cloud-kms` (the `google-cloud-rust` family). Pulls
# its own auth via `google-cloud-auth`, both under default features
# so service-account / metadata-server flows work out of the box.
google-cloud-kms = "0.6"
google-cloud-auth = "0.17"
google-cloud-gax = "0.19"
# Vault: `vaultrs` covers the transit secret engine (encrypt /
# decrypt / sign endpoints) which is the API we need for the DEK
# pattern.
vaultrs = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

