[tool.codespell]
skip = "*.lock,*.json,target,node_modules,.git,Cargo.lock,tests/RESUMO_TESTES.md,*.log,scripts"
ignore-words-list = "crate,ser,deser,fof,hel,FPR,implementor"

# The root of this repo is a Rust workspace. The `[project]` table below
# exists only so that `pip install .` does not crash during Python CI
# (`python-test.yml` runs `pip install .` whenever a pyproject.toml is
# present — setuptools rejects the manifest without a `version`
# property). `[tool.setuptools]` pins an empty package set so nothing
# is actually installed; the real Python SDK ships from `sdks/python/`.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-root-placeholder"
version = "0.0.0"
description = "Placeholder project for the Nexus workspace root (not published)."
requires-python = ">=3.11"

[tool.setuptools]
packages = []
py-modules = []

