[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for Nexus graph database"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(FALSE)'] }
unused = "allow"
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"

[lints.clippy]
all = "allow"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Terminal UI
colored = "2.1"
comfy-table = "7.1"
dialoguer = "0.11"
indicatif = "0.17"
rustyline = "14.0"
rustyline-derive = "0.10"

# Utilities
dirs = "5.0"
chrono = { workspace = true }
flate2 = "1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"

[package.metadata.deb]
maintainer = "HiveLLM Contributors <info@hivellm.org>"
depends = "$auto"
license-file = ["../LICENSE", "0"]
section = "database"
priority = "optional"
extended-description = """\
Nexus CLI is a command-line interface for the Nexus graph database. \
It provides interactive query execution, batch operations, database management, \
user and API key management, and comprehensive schema operations. \
Features include tab completion, query history, and shell completion generation.\
"""
assets = [
    ["target/release/nexus", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/nexus-cli/README", "644"],
    ["CHANGELOG.md", "usr/share/doc/nexus-cli/CHANGELOG", "644"],
    ["docs/BEST_PRACTICES.md", "usr/share/doc/nexus-cli/", "644"],
    ["man/nexus.1", "usr/share/man/man1/", "644"],
    ["man/nexus-query.1", "usr/share/man/man1/", "644"],
    ["man/nexus-db.1", "usr/share/man/man1/", "644"],
    ["man/nexus-user.1", "usr/share/man/man1/", "644"],
    ["man/nexus-key.1", "usr/share/man/man1/", "644"],
]
