[package]
name = "nexus-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Integration protocols for Nexus - REST, MCP, UMICP"

[dependencies]
# HTTP client
hyper.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# MCP protocol
rmcp = { version = "0.8.1", features = ["client", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }