[package]
name = "nexus-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Integration protocols for Nexus - REST, MCP, UMICP"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(FALSE)'] }
# Suppress common warnings
unused = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unused_assignments = "allow"
dead_code = "allow"

[lints.clippy]
# Suppress clippy warnings
all = "allow"
redundant_closure = "allow"
derivable_impls = "allow"
unnecessary_cast = "allow"
collapsible_match = "allow"

[dependencies]
# HTTP client
hyper.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# MCP protocol
rmcp = { version = "0.8.1", features = ["client", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }