[package]
name = "nexus-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HTTP server for Nexus graph database"

[[bin]]
name = "nexus-server"
path = "src/main.rs"

[dependencies]
# Core engine
nexus-core.workspace = true
nexus-protocol.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true

# MCP (Model Context Protocol) dependencies
rmcp.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

# Async runtime
tokio.workspace = true
async-stream = "0.3"
futures = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

# Error handling
anyhow.workspace = true

# Temporary files
tempfile.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

