[package]
name = "nexus-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HTTP server for Nexus graph database"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(FALSE)'] }
# Suppress common warnings
unused = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unused_assignments = "allow"
dead_code = "allow"

[lints.clippy]
# Suppress clippy warnings
all = "allow"
redundant_closure = "allow"
derivable_impls = "allow"
unnecessary_cast = "allow"
collapsible_match = "allow"

[[bin]]
name = "nexus-server"
path = "src/main.rs"

[dependencies]
# Core engine
nexus-core = { workspace = true, features = ["axum"] }
nexus-protocol.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true

# MCP (Model Context Protocol) dependencies
rmcp.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

# Async runtime
tokio.workspace = true
async-stream = "0.3"
futures = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
chrono.workspace = true
uuid = { version = "1.10", features = ["v4"] }
argon2 = "0.5"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Temporary files
tempfile.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# System monitoring
sysinfo = "0.32"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

