[package]
name = "nexus-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Nexus ↔ Neo4j comparative benchmark harness"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(FALSE)'] }

[lib]
name = "nexus_bench"
path = "src/lib.rs"

[[bin]]
name = "nexus-bench"
path = "src/bin/nexus-bench.rs"

[features]
default = []
# Neo4j Bolt driver. Opt-in so a developer without Docker / Neo4j
# can still build + test the Nexus-side half of the harness.
neo4j = ["dep:neo4rs", "dep:futures"]

[dependencies]
nexus-core.workspace = true

# Deterministic RNG for dataset generators.
rand.workspace = true

# Serialization.
serde.workspace = true
serde_json.workspace = true

# Error handling.
thiserror.workspace = true
anyhow.workspace = true

# Observability.
tracing.workspace = true

# CLI.
clap = { version = "4.5", features = ["derive"] }

# Async runtime (shared with nexus-core).
tokio.workspace = true

# Temp dirs for in-process engines.
tempfile.workspace = true

# Neo4j Bolt driver, feature-gated.
neo4rs = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
