[package]
name = "nexus-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Integration protocols for Nexus - REST, MCP, UMICP"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(FALSE)'] }

[lints.clippy]
# Tight-by-default; the crate is a thin client library and should not be
# sheltering warnings from the caller.

[dependencies]
# HTTP client
hyper.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Observability
tracing.workspace = true

# MCP protocol
rmcp = { version = "0.8.1", features = ["client", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }