[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus_sdk"
version = "0.1.0"
description = "Official Python SDK for Nexus graph database"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "HiveLLM Contributors"}
]
keywords = ["graph", "database", "cypher", "neo4j", "nexus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/hivellm/nexus"
Documentation = "https://github.com/hivellm/nexus"
Repository = "https://github.com/hivellm/nexus"
Issues = "https://github.com/hivellm/nexus/issues"

[tool.setuptools]
packages = ["nexus_sdk"]

[tool.setuptools.package-data]
nexus_sdk = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

